<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="3"
    android:orientation="vertical"
    tools:context=".MedNotification" >

    
    <TextView
                android:id="@+id/txtNotification"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/activity_med_notification_txt_med_notification" 
                android:textSize="20sp"/>
    
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
		
        <ImageView
            android:id="@+id/imgMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/splashscreen_imageview_content"
            android:src="@drawable/take_meds_pic1" />
        
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2">

        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMedName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/activity_med_notification_txt_med_name" 
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMedDose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/activity_med_notification_txt_med_dose" 
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_weight="1">
          
            <Button
                style="@style/btnStyleArsenic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:onClick="snoozePlay"
                android:text="@string/activity_med_notification_btn_snooze"  />
            
            <Button
                style="@style/btnStyleArsenic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:onClick="stopPlay"
                android:text="@string/activity_med_notification_btn_stop"  />
        </TableRow>

    </TableLayout>

</LinearLayout>